// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin Updates Confirmation should render with compatible and incompatible updates 1`] = `
<div>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 wWqtC"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Plugin Updates
          </h2>
          <div
            class="flex-1"
          >
            <svg
              class="m-auto my-8 w-3/5"
            >
              generic-warning-dark-green.svg
            </svg>
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Some of the plugins cannot be updated as they require a newer version of the Payvo Wallet. Pressing Continue will install all compatible updates.
            </div>
            <div
              class="mt-5"
              data-testid="PluginUpdatesConfirmation"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top"
                        >
                          <div>
                            Name
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity ml-2"
                          >
                            <div
                              class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-30 min-w-30"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top justify-center"
                        >
                          <div>
                            Compatible
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-36 min-w-36"
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top justify-end whitespace-nowrap flex-row-reverse"
                        >
                          <div>
                            Required Version
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                          >
                            <div
                              class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 cPmOfx"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jGsTbn space-x-4"
                        >
                          <div
                            class="PluginImage__PluginImageWrapper-sc-10kztrf-0 bLfBKU bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                            data-testid="PluginImage"
                          >
                            <img
                              alt="Logo"
                              class="object-cover w-full h-full"
                              src="https://payvo.com/logo.png"
                            />
                          </div>
                          <div
                            class="flex items-center space-x-2"
                          >
                            <span
                              class="font-semibold link max-w-60 truncate"
                              data-testid="PluginUpdates__title"
                            >
                              ARK Explorer
                            </span>
                            <div
                              class="sc-bdnxRM AFVmm text-theme-warning-600"
                              height="16"
                              width="16"
                            >
                              <svg>
                                shield-check-mark.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 cDWumh"
                        >
                          <div
                            class="mx-auto text-2xl text-theme-success-500"
                            data-testid="PluginUpdates__compatible"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                circle-check-mark.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 hNhRDD justify-end"
                        >
                          <span
                            data-testid="PluginUpdates__minimum-version"
                          >
                            3.0.5
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 cPmOfx"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jGsTbn space-x-4"
                        >
                          <div
                            class="PluginImage__PluginImageWrapper-sc-10kztrf-0 bLfBKU bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                            data-testid="PluginImage"
                          >
                            <svg>
                              plugin-logo-placeholder.svg
                            </svg>
                          </div>
                          <div
                            class="flex items-center space-x-2"
                          >
                            <span
                              class="font-semibold link max-w-60 truncate"
                              data-testid="PluginUpdates__title"
                            >
                              Animal Avatars
                            </span>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 cDWumh"
                        >
                          <div
                            class="mx-auto text-2xl text-theme-danger-400"
                            data-testid="PluginUpdates__incompatible"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                circle-cross.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 hNhRDD justify-end"
                        >
                          <span
                            data-testid="PluginUpdates__minimum-version"
                          >
                            3.1.0
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  data-testid="PluginUpdates__cancel-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                  data-testid="PluginUpdates__continue-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span>
                      Continue
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Plugin Updates Confirmation should render with compatible updates 1`] = `
<div>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 wWqtC"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Plugin Updates
          </h2>
          <div
            class="flex-1"
          >
            <svg
              class="m-auto my-8 w-3/5"
            >
              generic-warning-dark-green.svg
            </svg>
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              The following plugins will be updated.
            </div>
            <div
              class="mt-5"
              data-testid="PluginUpdatesConfirmation"
            >
              <div
                class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                      role="row"
                    >
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top"
                        >
                          <div>
                            Name
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity ml-2"
                          >
                            <div
                              class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-30 min-w-30"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top justify-center"
                        >
                          <div>
                            Compatible
                          </div>
                        </div>
                      </th>
                      <th
                        class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-36 min-w-36"
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top justify-end whitespace-nowrap flex-row-reverse"
                        >
                          <div>
                            Required Version
                          </div>
                          <div
                            class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                          >
                            <div
                              class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                              height="10"
                              role="img"
                              width="10"
                            >
                              <svg>
                                chevron-down-small.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="TableRow__TableRowStyled-sc-y9j4av-0 cPmOfx"
                      data-testid="TableRow"
                    >
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jGsTbn space-x-4"
                        >
                          <div
                            class="PluginImage__PluginImageWrapper-sc-10kztrf-0 bLfBKU bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
                            data-testid="PluginImage"
                          >
                            <img
                              alt="Logo"
                              class="object-cover w-full h-full"
                              src="https://payvo.com/logo.png"
                            />
                          </div>
                          <div
                            class="flex items-center space-x-2"
                          >
                            <span
                              class="font-semibold link max-w-60 truncate"
                              data-testid="PluginUpdates__title"
                            >
                              ARK Explorer
                            </span>
                            <div
                              class="sc-bdnxRM AFVmm text-theme-warning-600"
                              height="16"
                              width="16"
                            >
                              <svg>
                                shield-check-mark.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 cDWumh"
                        >
                          <div
                            class="mx-auto text-2xl text-theme-success-500"
                            data-testid="PluginUpdates__compatible"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                circle-check-mark.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="TableCell__TableCellInnerWrapper-sc-v39gua-0 hNhRDD justify-end"
                        >
                          <span
                            data-testid="PluginUpdates__minimum-version"
                          >
                            3.0.5
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  data-testid="PluginUpdates__cancel-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                  data-testid="PluginUpdates__continue-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span>
                      Continue
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
